[package]
name    = "screenruster-saver"
version = "0.1.6"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Rust API for ScreenRuster."
repository  = "https://github.com/meh/screenruster-saver"
keywords    = ["graphics", "x11"]

[dependencies]
log        = "0.3"
env_logger = "0.3"

json = "0.7"
libc = "0.2"

x11   = { optional = true, version = "2", features = ["xlib", "glx"] }
glium = { optional = true, version = "0.15", default-features = false }
image = { optional = true, version = "0.10" }

[features]
default  = ["renderer"]
renderer = ["x11", "glium", "image"]
