[package]
name    = "screenruster-saver"
version = "0.2.1"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Rust API for ScreenRuster."
repository  = "https://github.com/meh/screenruster-saver"
keywords    = ["graphics", "x11"]

[dependencies]
log        = "0.4"
env_logger = "0.7"

json = "0.12"
libc = "0.2"
crossbeam-channel = "0.4"

x11   = { optional = true, version = "2", features = ["xlib", "glx"] }
gl = { optional = true, package = "glium", version = "0.25", default-features = false }
picto = { optional = true, version = "0.4" }

[features]
default  = ["renderer"]
renderer = ["x11", "gl", "picto"]
